<resources>
    <string name="app_name">Neuroreality app</string>

    <string name="action_settings">Settings</string>
    <string name="videolist_name">Neuroreality video List</string>

    <string name="videoPlayer_name">Video player screen</string>
    <string name="videoPlayer_text">Put the headset on, press play, and enjoy the movie... </string>
    <string name="showGraph">Show graph</string>
    <string name="saveGraph">Save graph</string>
    <string name="clearGraph">Clear graph</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello">Form</string>
    <string name="display">Display</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="boxModel">Box Model</string>
</resources>
